# project_purrview

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/public/: daji_nobg.webm  majiang_nobg.webm  shader-debug.html  songhua_nobg.webm  xiaohei_nobg.webm  xiaoman_nobg.webm
apps/web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/web/src/app/cats/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/app/timeline/: page.tsx
apps/web/src/components/: HeroCarousel.tsx  NavBar.tsx  ScanlineCanvas.tsx
apps/web/src/lib/: catColors.ts  mock.ts  queries.ts  supabase.ts  types.ts
apps/worker/: Dockerfile  docker-compose.yml  gallery.html  pyproject.toml
apps/worker/src/: __init__.py  analyzer.py  capture.py  cleanup.py  collect.py  config.py  detector.py  digest.py  eval_identify.py  gallery.py  label.py  label_server.py  main.py  notifier.py  replay.py  storage.py  tracker.py
apps/worker/tests/: test_analyzer.py  test_detector.py  test_digest.py  test_main.py  test_notifier.py  test_storage.py  test_tracker.py
docs/: PRD.md
docs/plans/: 2026-02-20-phase4-implementation.md  2026-02-20-phase4-pipeline-design.md  2026-02-21-phase5-hero-dashboard-design.md  2026-02-21-phase5-implementation.md
scripts/: ec2-collect.sh  ec2-worker.sh  purrview-worker.service  worker-service.sh
supabase/migrations/: 001_create_purrview_tables.sql  002_add_activity_to_feeding_events.sql
(+14 files in other folders)
